Fix images in house model and interior, fix horizontal scrollbar

--- a/src/components/houseModel/houseModel.module.css
+++ b/src/components/houseModel/houseModel.module.css
@@ -1,3 +1,7 @@
+.sectionContainer {
+  margin-bottom: 50px;
+}
+
 .sectionTitle {
   margin-bottom: 50px;
 }
@@ -6,7 +10,6 @@
 font-size: 50px;
 font-weight: 500;
 text-transform: uppercase;
-/* color: #d29751; */
 letter-spacing: 2px;
 display: block;
 margin-bottom: 20px;
@@ -27,7 +30,7 @@ right: 0;
 bottom: 0;
 height: 4px;
 width: 60px;
-background: #EF7F24;
+background: var(--main-color);
 margin: auto;
 transition: .3s;
 }
@@ -36,11 +39,12 @@ transition: .3s;
 
 .imgGroup {
   display: flex;
+  padding: 0 15px;
   /* height: 600px; */
 }
 
 .imgContainer {
-  height: auto;
+  padding: 0 10px;
 }
 
 .imgResponsive {
@@ -63,11 +67,11 @@ transition: .3s;
 
   .imgGroup {
     flex-direction: column;
-    height: 480px;
+    /* height: 480px; */
     gap: 20px;
   }
 
   .imgContainer {
-    height: 300px;
+    /* height: 300px; */
   }
 }
